<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/item_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_item_path"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/item_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_item_id"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:id="@+id/item_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/text_item_version"
            android:imeOptions="actionNext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_item_database"
            android:id="@+id/item_database"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/item_language"
            android:hint="@string/text_item_language"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check_scope_self"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/text_self_checkbox" />

            <CheckBox
                android:id="@+id/check_scope_parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/text_parent_checkbox" />

            <CheckBox
                android:id="@+id/check_scope_children"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/text_children_checkbox" />
        </LinearLayout>

        <EditText
            android:id="@+id/query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_sitecore_query"
            android:imeOptions="actionNext"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/page"
            android:hint="@string/text_page"
            android:imeOptions="actionNext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/page_size"
            android:hint="@string/text_page_size"
            android:inputType="number"
            android:imeOptions="actionDone" />
    </LinearLayout>

</ScrollView>
