<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/text_field_name"
        android:id="@+id/field_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_field_type" />

        <EditText
            android:enabled="false"
            android:id="@+id/field_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_field_id" />

    <EditText
        android:enabled="false"
        android:id="@+id/field_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_field_raw_value" />

    <EditText
        android:enabled="false"
        android:id="@+id/field_raw_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />

</LinearLayout>